--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Build and Publish
         uses: viamrobotics/build-action@v1.4
         with:
@@ -19,14 +18,21 @@ jobs:
           key-value: ${{ secrets.viam_labs_api_key }}
           token: ${{ github.token }}
 
-  publish-windows:
-    name: Build and Upload module (windows)
-    runs-on: windows-2025
-    steps:
-      - uses: actions/checkout@v4
+  build-windows:
+    uses: ./.github/workflows/build-and-upload-windows.yml
+    with:
+      ref: ${{ github.sha }}
+      include-meta: true
 
-      - name: Build Windows module
-        uses: ./.github/actions/build-windows
+  publish-windows:
+    name: Upload module (windows)
+    needs: build-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: modular-webcam-windows
 
       - name: Upload module to registry
         uses: viamrobotics/upload-module@v1
