--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   publish:
-    name: Build and Upload module (linux, darwin)
+    name: Build and Publish module (linux, darwin)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,7 +25,7 @@ jobs:
       include-meta: true
 
   publish-windows:
-    name: Upload module (windows)
+    name: Publish module (windows)
     needs: build-windows
     runs-on: ubuntu-latest
     steps:
@@ -34,7 +34,7 @@ jobs:
         with:
           name: modular-webcam-windows
 
-      - name: Upload module to registry
+      - name: Publish module to registry
         uses: viamrobotics/upload-module@v1
         with:
           meta-path: meta.json
